# message-bridge-rs

./: Cargo.toml  README.md  bridge-design.drawio  config.json
axios_rs/: Cargo.toml
mirai_rs/: Cargo.toml
mirai_rs/src/: lib.rs
mirai_rs/src/api/: base_response.rs
mirai_rs/src/mirai_api_adapter/: mirai_api_adapter.rs  mod.rs  ws_adapter.rs
src/: dc_demo.rs  main.rs  qq_demo.rs
src/bridge/: bridge.rs  mod.rs
src/discord/: connection.rs  discord_bridge.rs  mod.rs
src/qq/: connection.rs  mod.rs  qq_bridge.rs
